# zephyr-backend

./: .coveragerc  .dockerignore  .gitignore  README.md  docker-compose-dev.yml  docker-compose-test.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 25be385013d4_add_new_models_post_track.py  35db080db013_initial_user.py  b8b002459e2f_add_new_models_post_track.py
config/app/: Dockerfile
zephyr/: Dockerfile  Dockerfile.prod  Dockerfile.test  run_server.sh  run_test.sh
zephyr/app/: main.py  utils.py
zephyr/app/api/: deps.py
zephyr/app/api/api_v1/: routers.py
zephyr/app/api/api_v1/endpoints/: auth.py  search.py  user.py
zephyr/app/core/: config.py  redis.py  security.py  spotify.py
zephyr/app/crud/: __init__.py  base.py  crud_post.py  crud_user.py
zephyr/app/db/: base.py  session.py
zephyr/app/models/: __all_models.py  __init__.py  post.py  user.py
zephyr/app/schemas/: __init__.py  post.py  user.py
zephyr/app/tests/: conftest.py
zephyr/app/tests/api/api_v1/: test_auth.py  test_post.py
zephyr/app/tests/core/: test_security.py
zephyr/app/tests/crud/: test_user.py
zephyr/app/tests/utils/: user.py
zephyr/app/utils/: spotify.py
