[tool.poetry]
name = "zephyr-backend"
version = "1.1.8"
description = ""
authors = ["qu3vipon <sdh5813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.23"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
