[tool.poetry]
name = "zephyr-backend"
version = "0.1.0"
description = ""
authors = ["qu3vipon <qu3vipon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.23"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.26.0"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"
asyncpg = "^0.24.0"
schema = "^0.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
